--- a/CredentialExtension/Open.storyboard
+++ b/CredentialExtension/Open.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZZH-4Q-jV1">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZZH-4Q-jV1">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,7 +42,7 @@
         <!--Sliding Navigation Controller-->
         <scene sceneID="0KW-XB-oBH">
             <objects>
-                <navigationController navigationBarHidden="YES" id="tbP-wA-KjB" customClass="SlidingNavigationController" customModule="MiKit" sceneMemberID="viewController">
+                <navigationController modalPresentationStyle="fullScreen" navigationBarHidden="YES" id="tbP-wA-KjB" customClass="SlidingNavigationController" customModule="MiKit" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VjB-Zh-rG0">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -72,7 +71,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fz5-4D-bLl">
-                                <rect key="frame" x="315" y="20" width="44" height="44"/>
+                                <rect key="frame" x="315" y="0.0" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="Ver-Zm-XwF"/>
                                     <constraint firstAttribute="width" secondItem="Fz5-4D-bLl" secondAttribute="height" multiplier="1:1" id="Xq3-AH-zjz"/>
@@ -132,7 +131,6 @@
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="Z1o-Wd-esL"/>
                                                     <constraint firstAttribute="height" constant="24" id="k8I-BJ-hWh"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
@@ -162,7 +160,6 @@
                                                 <accessibility key="accessibilityConfiguration" identifier="pass_field">
                                                     <bool key="isElement" value="YES"/>
                                                 </accessibility>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="go" secureTextEntry="YES" textContentType="password"/>
                                                 <connections>
